# semantic-model-generator

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.claude/: gsd-file-manifest.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ruff-format-hook-failure.md
.planning/debug/resolved/: azure-identity-import-error.md  fabric-notebook-auth-failure.md  output-path-string-type-error.md  pbism-extra-properties.md  pbism-schema-validation-error-duplicate.md  pbism-schema-validation-error.md  tmdl-invalid-ref-table-syntax.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-MILESTONE-AUDIT.md  v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md
.planning/phases/01-project-foundation-build-system/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-domain-types-core-utilities/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-schema-discovery-classification/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-relationship-inference/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-tmdl-generation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-output-layer/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-fabric-rest-api-integration/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.references/: Semantic Model Generator.ipynb
src/semantic_model_generator/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py  test_pipeline.py  test_pipeline_integration.py  test_placeholder.py
tests/domain/: __init__.py  test_types.py
tests/fabric/: __init__.py  test_auth.py  test_deployment.py  test_packaging.py  test_polling.py  test_resolution.py
tests/output/: __init__.py  test_watermark.py  test_writer.py
tests/schema/: test_classification.py  test_connection.py  test_discovery.py  test_filtering.py  test_relationships.py
tests/tmdl/: __init__.py  test_generate.py  test_metadata.py
tests/utils/: test_identifiers.py  test_type_mapping.py  test_uuid_gen.py  test_whitespace.py
(+42 files in other folders)
